fixed defense config, changed spawnRobot back to using clamp